base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: environment-portal
spec:
  selector:
    app: environment-portal
  ports:
    - port: 80
      targetPort: 80
