base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: environment-portal
spec:
  to:
    kind: Service
    name: environment-portal
  port:
    targetPort: 80
